<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/par">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display_a_team"
                style="@style/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlayA" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_point" />

            <Button
                style="@style/Port_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="in"
                android:text="@string/b_in" />

            <Button
                style="@style/Port_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="out"
                android:text="@string/b_out" />

            <Button
                style="@style/Port_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="let"
                android:text="@string/b_let" />

            <TextView
                android:id="@+id/team_a_set"
                style="@style/set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_set" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/b2_mb"
            android:onClick="resetSet"
            android:text="@string/Sets" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display_text_view"
                style="@style/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlayB" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_point" />


            <Button
                style="@style/Port_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inB"
                android:text="@string/b_in" />

            <Button
                style="@style/Port_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="outB"
                android:text="@string/b_out" />

            <Button
                style="@style/Port_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="letB"
                android:text="@string/b_let" />

            <TextView
                android:id="@+id/team_b_set"
                style="@style/set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_set" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/bm_lr"
        android:onClick="reset"
        android:text="@string/xyz" />


</RelativeLayout>